packages/raystack/components/scroll-area/scroll-area.module.css
:root {
  --rs-scrollbar-size-default: var(--rs-space-2);
  --rs-scrollbar-size-hover: 6px;
}

.root {
  position: relative;
  overflow: hidden;
  display: flex;
  width: 100%;
}

.viewport {
  width: 100%;
  height: 100%;
  border-radius: inherit;
  overscroll-behavior: auto;
}

.scrollbar {
  display: flex;
  user-select: none;
  touch-action: none;
  padding: 0;
  background: transparent;
  pointer-events: auto;
  position: relative;
  transition: opacity 150ms ease-out;
}

.scrollbar[data-orientation="vertical"] {
  width: var(--rs-scrollbar-size-default);
}

.scrollbar[data-orientation="vertical"]:hover {
  width: var(--rs-scrollbar-size-hover);
}

.scrollbar[data-orientation="horizontal"] {
  flex-direction: column;
  height: var(--rs-scrollbar-size-default);
}

.scrollbar[data-orientation="horizontal"]:hover {
  height: var(--rs-scrollbar-size-hover);
}

.thumb {
  flex: 1;
  background: var(--rs-color-overlay-base-a5);
  border-radius: var(--rs-radius-2);
  transition: opacity 150ms ease-out;
  opacity: 1;
  pointer-events: auto;
  touch-action: none;
}

@media (prefers-reduced-motion: no-preference) {
  .scrollbar {
    transition:
      width 150ms ease-out,
      height 150ms ease-out,
      opacity 150ms ease-out;
  }
}

.corner {
  background: transparent;
}
.scrollbar:hover,
.scrollbar-always,
.scrollbar-hover[data-hovering],
.scrollbar-scroll[data-scrolling] {
  opacity: 1;
}

.scrollbar-hover,
.scrollbar-scroll {
  opacity: 0;
}

